# agentic-ai-demos-dec-2025

Multiagent NFL/: agent.py
crew-ai/: .env  main.py
crew-ai/agents/: booking_agent.py  customer_service_agent.py  travel_advisor_agent.py
crew-ai/config/: settings.py
crew-ai/core/: crew_tasks.py  travel_booking_crew.py
crew-ai/tools/: travel_tools.py
demo-phidata/: csv_analyst_chunks.py  csv_analyst_chunks_article.py
demo-phidata/data/: sample_data.csv
demo-travel-agent/: Dockerfile
langchain-demos/: privacy-policy.txt  rag_demo.py
langgraph-trainer-agent/: .gitignore  config.py  ingest.py  kb_store.py  rag_agent.py  telegram_bot.py
langgraph-trainer-agent/kb/: agentic_ai_basic.txt  agentic_as_5years.txt  python.txt
langsmith-demo/: .env.example  agent.py
project-plan-generator/: .env.example  .gitignore  README.md  main.py  my_requirement.txt  pyproject.toml  requirements.txt
project-plan-generator/agents/: __init__.py  delivery_planner.py  epic_generator.py  plan_formatter.py  requirement_analyzer.py  story_generator.py
project-plan-generator/examples/: ecommerce_requirement.txt  messaging_app_requirement.txt  task_management_requirement.txt
project-plan-generator/models/: __init__.py  state.py
project-plan-generator/utils/: __init__.py  llm_factory.py
project-plan-generator/workflows/: __init__.py  plan_workflow.py
